--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fashion Email</title>
+    <title>Dexlus Email</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');
 
@@ -19,6 +19,11 @@
             .two-column {
                 width: 100%;
             }
+            .two-column tr td a{
+                margin-right: 0!important;
+                margin-bottom: 10px;
+                display: block !important;
+            }
             .two-column img {
                 width: 50%;
             }
@@ -26,7 +31,7 @@
                 width: 10%;
             }
         }
-        @media screen and (max-width: 360px) {
+        @media screen and (max-width: 375px) {
             .container {
                 width: 100%;
             }
@@ -41,9 +46,9 @@
     </style>
 </head>
 
-<body style="background: #E8E8E8;min-width: 600px;padding: 0 0 0 0;Margin: 20px 0 20px 0;">
+<body style="background: #E8E8E8;padding: 0 0 0 0;Margin: 20px 0 20px 0;">
 <!-- Start HTML Email -->
-<table width="100%" border="0" role="presentation" cellpadding="0" cellspacing="0" >
+<table width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation">
 
     <!-- Preheader (remove comment)-->
     <div style="font-size: 0px;color: #fafdfe;line-height: 1px;mso-line-height-rule:exactly;display: none;max-width: 0px;opacity: 0;overflow: hidden;mso-hide:all;">
